--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -4,9 +4,16 @@
   }
   
   body {
+    text-align: center;
     padding: 20px;
-    background: #eee;
+    background: #2f302e ;
     user-select: none;
+  }
+
+  h1 {
+    margin: 50px;
+    font-size: 5rem;
+    color: #eae6e5;
   }
   
   [type=radio] {
@@ -23,8 +30,8 @@
   #slider label {
     margin: auto;
     width: 60%;
-    height: 100%;
-    border-radius: 4px;
+    height:85%;
+    border-radius: 10px;
     position: absolute;
     left: 0; right: 0;
     cursor: pointer;
@@ -66,8 +73,13 @@
     transform: translate3d(30%,0,-200px);
   }
   
-  #slide1 { background: #00BCD4 }
-  #slide2 { background: #4CAF50 }
-  #slide3 { background: #CDDC39 }
-  #slide4 { background: #FFC107 }
-  #slide5 { background: #FF5722 }
+  #slide1 { background-image: url('two.jpg');
+  background-size: cover; }
+  #slide2 { background-image: url('three.jpg');
+  background-size: cover; }
+  #slide3 { background-image: url('two.jpg');
+  background-size: cover; }
+  #slide4 { background-image: url('three.jpg');
+  background-size: cover; }
+  #slide5 { background-image: url('two.jpg');
+  background-size: cover; }
