--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -14,6 +14,7 @@
     margin: 50px;
     font-size: 5rem;
     color: #eae6e5;
+    font-family: 'Special Elite', cursive;
   }
   
   [type=radio] {
