--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -3,6 +3,12 @@
     padding: 0;
   }
   
+  a {
+    text-decoration: none;
+    color: white;
+  }
+
+
   body {
     text-align: center;
     padding: 20px;
