--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -115,3 +115,11 @@
     margin-right: 200px;
     font-size: 30px;
   }
+
+  a:hover {
+    color: white;
+  }
+
+  a:active {
+    color: white;
+  }
