--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -143,10 +143,10 @@
   }
 
   p {
-    text-indent: 50px;
-    padding: 50px;
+    padding: 20px;
     line-height: 1.5;
     font-size: 24px;
+    overflow: auto;
   }
 
   h2 {
