--- a/server/public/mikey.css
+++ b/server/public/mikey.css
@@ -80,35 +80,45 @@
     transform: translate3d(30%,0,-200px);
   }
   
-  #slide1 { background-image: url('/images/DoubleBrown.jpeg');
-  background-size: contain; 
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center; }
+  #slide1 { 
+    background-image: url('/images/DoubleBrown.jpeg');
+    background-size: contain; 
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
 
-  #slide2 { background-image: url('/images/ExportGold.jpeg');
-  background-size: contain;
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center; }
+  #slide2 { 
+    background-image: url('/images/Flame.jpeg');
+    background-size: contain;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
 
-  #slide3 { background-image: url('/images/Flame.jpeg');
-  background-size: contain; 
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-  #slide4 { background-image: url('/images/NZLager.jpeg');
-  background-size: contain; 
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-  #slide5 { background-image: url('/images/VictoriaBitter.jpeg');
-  background-size: contain; 
-  background-color: white;
-  background-repeat: no-repeat;
-  background-position: center; }
+  #slide3 {
+    background-image: url('/images/VictoriaBitter.jpeg');
+    background-size: contain; 
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
+    
+  #slide4 { 
+    background-image: url('/images/ExportGold.jpeg');
+    background-size: contain; 
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
+      
+  #slide5 { 
+    background-image: url('/images/NZLager.jpeg');
+    background-size: contain; 
+    background-color: white;
+    background-repeat: no-repeat;
+    background-position: center; 
+  }
 
   .logo {
     width: 100%;
